--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -38,5 +38,21 @@ const overview = t('rightSidebar.overview');
 		}
 		<Fragment slot="after-title"><slot name="header" /></Fragment>
 		<slot />
+		<script is:inline>
+			// Smart code snippet updater (TODO)
+			// Goal: Every `` code snippet that we use in Markdown could become an anchor link
+			// automatically, without the user needing to do anything. It would need access to
+			// some array of all valid references and their URLs. This could also work well as
+			// a markdown remark component/replacement to happen at build time, but I'm less 
+			// clear how that would work and mainly wanted to see if this was possible.
+			for (const el of document.querySelectorAll('code')) {
+				if (el.innerText === 'astro add') {
+					const ahref = document.createElement("a");
+					ahref.href = '/en/reference/cli/add/';
+					el.replaceWith(ahref);
+					ahref.appendChild(el);
+				}
+			}
+		</script>
 	</PageContent>
 </BaseLayout>
