refactor: centralise `getCollection` to single call site

--- a/src/components/CMSGuidesNav.astro
+++ b/src/components/CMSGuidesNav.astro
@@ -1,14 +1,11 @@
 ---
 import { getLanguageFromURL } from '../util';
 import CardsNav from './NavGrid/CardsNav.astro';
-import { getCollection } from 'astro:content';
-import { isCmsEntry, CmsEntry, isEnglishEntry } from '~/content/config';
+import { englishPages } from '~/content';
+import { isCmsEntry } from '~/content/config';
 
 const lang = getLanguageFromURL(Astro.url.pathname);
-const enPages = await getCollection(
-	'docs',
-	(entry): entry is CmsEntry => isCmsEntry(entry) && isEnglishEntry(entry)
-);
+const enPages = englishPages.filter(isCmsEntry);
 
 /** Array of services we have good content for and want to show first in the list. */
 const showFirst = ['Storyblok', 'Contentful', 'ButterCMS'];
