--- a/src/components/IntegrationsNav.astro
+++ b/src/components/IntegrationsNav.astro
@@ -2,13 +2,8 @@
 import { getLanguageFromURL } from '../util';
 import { useTranslations } from '../i18n/util';
 import CardsNav from './NavGrid/CardsNav.astro';
-import { getCollection } from 'astro:content';
-import {
-	IntegrationCategory,
-	IntegrationEntry,
-	isEnglishEntry,
-	isIntegrationEntry,
-} from '~/content/config';
+import { IntegrationCategory, IntegrationEntry, isIntegrationEntry } from '~/content/config';
+import { englishPages } from '~/content';
 
 const lang = getLanguageFromURL(Astro.url.pathname);
 
@@ -32,10 +27,7 @@ function categoryLinksFromPages(pages: IntegrationEntry[], category: Integration
 
 const t = useTranslations(Astro);
 
-const enPages = await getCollection(
-	'docs',
-	(entry): entry is IntegrationEntry => isIntegrationEntry(entry) && isEnglishEntry(entry)
-);
+const enPages = englishPages.filter(isIntegrationEntry);
 
 const categories = [
 	{ title: t('integrations.renderers'), links: categoryLinksFromPages(enPages, 'renderer') },
