--- a/src/components/MigrationGuidesNav.astro
+++ b/src/components/MigrationGuidesNav.astro
@@ -1,15 +1,12 @@
 ---
-import { getCollection } from 'astro:content';
-import { isEnglishEntry, isMigrationEntry, MigrationEntry } from '~/content/config';
+import { englishPages } from '~/content';
+import { isMigrationEntry } from '~/content/config';
 import { getLanguageFromURL } from '../util';
 import CardsNav from './NavGrid/CardsNav.astro';
 
 const lang = getLanguageFromURL(Astro.url.pathname);
 
-const enPages = await getCollection(
-	'docs',
-	(entry): entry is MigrationEntry => isMigrationEntry(entry) && isEnglishEntry(entry)
-);
+const enPages = englishPages.filter(isMigrationEntry);
 
 /** Array of frameworks we have good content for and want to show first in the list. */
 const showFirst: string[] = [];
