--- a/src/components/tutorial/TutorialNav.astro
+++ b/src/components/tutorial/TutorialNav.astro
@@ -1,6 +1,5 @@
 ---
-import { getCollection } from 'astro:content';
-import { isTutorialEntry } from '~/content/config';
+import { tutorialPages as pages } from '~/content';
 import { getLanguageFromURL, stripLangFromSlug } from '../../util';
 import { getTutorialPages, getTutorialUnits } from '../../util/getTutorialPages';
 import TabbedContent from '../tabs/TabbedContent.astro';
@@ -15,7 +14,6 @@ export interface Props {
 
 const currentUrl = Astro.url.pathname.replace(/\/$/, '');
 const lang = getLanguageFromURL(Astro.url.pathname);
-const pages = await getCollection('docs', isTutorialEntry);
 
 const tutorialPages = getTutorialPages(pages, lang);
 const units = getTutorialUnits(tutorialPages);
