--- a/src/layouts/TutorialLayout.astro
+++ b/src/layouts/TutorialLayout.astro
@@ -1,5 +1,5 @@
 ---
-import { getCollection } from 'astro:content';
+import { tutorialPages as pages } from '~/content';
 import PageContent from '../components/PageContent/PageContent.astro';
 import MobileTutorialNav from '../components/tutorial/MobileTutorialNav.astro';
 import RightSidebar from '../components/tutorial/RightSidebar.astro';
@@ -7,7 +7,7 @@ import { getLanguageFromURL, stripLangFromSlug } from '../util';
 import { getPreviousAndNext } from '../util/getNavLinks';
 import { getTutorialPages, getTutorialUnits } from '../util/getTutorialPages';
 import BaseLayout from './BaseLayout.astro';
-import { isTutorialEntry, TutorialEntry } from '~/content/config';
+import type { TutorialEntry } from '~/content/config';
 
 export interface Props {
 	content: TutorialEntry['data'];
@@ -15,7 +15,6 @@ export interface Props {
 
 const currentUrl = Astro.url.pathname.replace(/\/$/, '');
 const lang = getLanguageFromURL(Astro.url.pathname);
-const pages = await getCollection('docs', isTutorialEntry);
 
 const tutorialPages = getTutorialPages(pages, lang);
 const units = getTutorialUnits(tutorialPages);
