--- a/src/pages/[...enRedirectSlug].astro
+++ b/src/pages/[...enRedirectSlug].astro
@@ -1,12 +1,9 @@
 ---
 // Redirect from base to /en/ pages
-import { getCollection } from 'astro:content';
+import { englishPages } from '~/content';
 import { stripLangFromSlug } from '~/util';
 
 export async function getStaticPaths() {
-	// get english pages that moved from `/` to `/en/`
-	const englishPages = await getCollection('docs', ({ id }) => id.startsWith('en/'));
-
 	return englishPages.map((page) => {
 		return {
 			params: {
