--- a/src/pages/[lang]/[...fallback].astro
+++ b/src/pages/[lang]/[...fallback].astro
@@ -1,6 +1,7 @@
 ---
-import { CollectionEntry, getCollection } from 'astro:content';
+import type { CollectionEntry } from 'astro:content';
 import LayoutSwitcher from '~/layouts/LayoutSwitcher.astro';
+import { allPages } from '~/content';
 import { stripLangFromSlug } from '~/util';
 import languages from '../../i18n/languages';
 import { groupPagesByLang } from '../../util/groupPagesByLang';
@@ -10,8 +11,6 @@ import { groupPagesByLang } from '../../util/groupPagesByLang';
 // on a fallback page or on a regular page.
 
 export async function getStaticPaths() {
-	const allPages = await getCollection('docs');
-
 	// Handle fallbacks to english for langs without translations
 	const fallbacks = [];
 	const pagesByLang = groupPagesByLang(allPages);
