--- a/src/pages/[lang]/[...slug].astro
+++ b/src/pages/[lang]/[...slug].astro
@@ -1,11 +1,10 @@
 ---
-import { CollectionEntry, getCollection } from 'astro:content';
+import type { CollectionEntry } from 'astro:content';
+import { allPages } from '~/content';
 import LayoutSwitcher from '~/layouts/LayoutSwitcher.astro';
-import { stripLangFromSlug, getLangFromSlug } from '~/util';
+import { getLangFromSlug, stripLangFromSlug } from '~/util';
 
 export async function getStaticPaths() {
-	const allPages = await getCollection('docs');
-
 	return allPages.map((page) => {
 		const lang = getLangFromSlug(page.slug);
 		const slug = stripLangFromSlug(page.slug);
