refactor: Use Zod to check logo keys

--- a/src/components/CMSGuidesNav.astro
+++ b/src/components/CMSGuidesNav.astro
@@ -1,8 +1,9 @@
 ---
-import { getLanguageFromURL } from '../util';
-import CardsNav from './NavGrid/CardsNav.astro';
 import { englishPages } from '~/content';
 import { isCmsEntry } from '~/content/config';
+import { isLogoKey } from '~/data/logos';
+import { getLanguageFromURL } from '~/util';
+import CardsNav from './NavGrid/CardsNav.astro';
 
 const lang = getLanguageFromURL(Astro.url.pathname);
 const enPages = englishPages.filter(isCmsEntry);
@@ -27,8 +28,7 @@ const links = enPages
 	.map((page) => {
 		const { service } = page.data;
 		const pageUrl = '/' + page.slug.replace('en/', `${lang}/`) + '/';
-		// TODO: convert logo type def to a Zod enum
-		const logo = page.slug.split('/').pop() as any;
+		const logo = isLogoKey(page.slug.split('/').pop());
 		return { title: service, href: pageUrl, logo };
 	});
 ---
