--- a/src/components/MigrationGuidesNav.astro
+++ b/src/components/MigrationGuidesNav.astro
@@ -1,7 +1,8 @@
 ---
 import { englishPages } from '~/content';
 import { isMigrationEntry } from '~/content/config';
-import { getLanguageFromURL } from '../util';
+import { isLogoKey } from '~/data/logos';
+import { getLanguageFromURL } from '~/util';
 import CardsNav from './NavGrid/CardsNav.astro';
 
 const lang = getLanguageFromURL(Astro.url.pathname);
@@ -27,9 +28,8 @@ const links = enPages
 	})
 	.map((page) => {
 		const pageUrl = page.slug.replace('en/', `/${lang}/`) + '/';
-		// TODO: parse logo with zod schema
 		const slug = page.slug.split('/').pop()?.replace('from-', '');
-		return { title: page.data.framework, href: pageUrl, logo: slug as any };
+		return { title: page.data.framework, href: pageUrl, logo: isLogoKey(slug) };
 	});
 ---
 
