--- a/src/components/NavGrid/Card.astro
+++ b/src/components/NavGrid/Card.astro
@@ -1,9 +1,10 @@
 ---
-import BrandLogo, { Props as LogoProps } from '../BrandLogo.astro';
+import type { LogoKey } from '~/data/logos';
+import BrandLogo from '../BrandLogo.astro';
 
 export interface Props {
 	href: string;
-	logo: LogoProps['brand'];
+	logo: LogoKey;
 	current?: boolean;
 	minimal?: boolean;
 	[key: string]: any;
