--- a/src/components/DeployGuidesNav.astro
+++ b/src/components/DeployGuidesNav.astro
@@ -1,8 +1,8 @@
 ---
-import { getLanguageFromURL } from '../util';
-import { useTranslations } from '../i18n/util';
-import type { Props as LogoProps } from './BrandLogo.astro';
+import { getLanguageFromURL } from '~/util';
+import { useTranslations } from '~/i18n/util';
 import CardsNav from './NavGrid/CardsNav.astro';
+import type { LogoKey } from '~/data/logos';
 
 export interface Props {
 	minimal?: boolean;
@@ -15,7 +15,7 @@ const t = useTranslations(Astro);
 
 interface Service {
 	title: string;
-	slug: LogoProps['brand'];
+	slug: LogoKey;
 	supports: ['ssr', 'static'] | ['ssr'] | ['static'];
 }
 
