--- a/src/components/IntegrationsNav.astro
+++ b/src/components/IntegrationsNav.astro
@@ -1,9 +1,10 @@
 ---
-import { getLanguageFromURL } from '../util';
-import { useTranslations } from '../i18n/util';
-import CardsNav from './NavGrid/CardsNav.astro';
-import { IntegrationCategory, IntegrationEntry, isIntegrationEntry } from '~/content/config';
 import { englishPages } from '~/content';
+import { IntegrationCategory, IntegrationEntry, isIntegrationEntry } from '~/content/config';
+import { isLogoKey } from '~/data/logos';
+import { useTranslations } from '~/i18n/util';
+import { getLanguageFromURL } from '~/util';
+import CardsNav from './NavGrid/CardsNav.astro';
 
 const lang = getLanguageFromURL(Astro.url.pathname);
 
@@ -20,7 +21,7 @@ function categoryLinksFromPages(pages: IntegrationEntry[], category: Integration
 					'/</span><wbr>' +
 					name.replaceAll('-', '&#8288;-&#8288;'),
 				href: pageUrl,
-				logo: name as any,
+				logo: isLogoKey(name),
 			};
 		});
 }
