--- a/src/layouts/DeployGuideLayout.astro
+++ b/src/layouts/DeployGuideLayout.astro
@@ -1,16 +1,18 @@
 ---
 import type { MarkdownHeading } from 'astro';
-import MainLayout from './MainLayout.astro';
-import DeployGuidesNav from '../components/DeployGuidesNav.astro';
-import BrandLogo, { Props as LogoProps } from '~/components/BrandLogo.astro';
+import BrandLogo from '~/components/BrandLogo.astro';
+import DeployGuidesNav from '~/components/DeployGuidesNav.astro';
 import type { DeployEntry } from '~/content/config';
+import { isLogoKey } from '~/data/logos';
+import MainLayout from './MainLayout.astro';
 
 export interface Props {
 	content: DeployEntry['data'];
 	headings: MarkdownHeading[];
 }
 
-const brand = Astro.url.pathname.replace(/\/$/, '').split('/').pop() as LogoProps['brand'];
+const slug = Astro.url.pathname.replace(/\/$/, '').split('/').pop();
+const brand = isLogoKey(slug);
 ---
 
 <MainLayout {...Astro.props}>
