perf: Only render lesson we need headings for in TutorialNav

--- a/src/components/tutorial/TutorialNav.astro
+++ b/src/components/tutorial/TutorialNav.astro
@@ -42,7 +42,8 @@ const isCurrentUnit = (unit: typeof units[number]) =>
 						<ol class="lessons">
 							{unit.lessons.map(async (lesson, index) => {
 								const slugWithoutLang = stripLangFromSlug(lesson.slug);
-								const { headings } = await lesson.render();
+								const headings =
+									currentUrl.endsWith(lesson.slug) && (await lesson.render()).headings;
 								return (
 									<li>
 										<div>
@@ -55,7 +56,7 @@ const isCurrentUnit = (unit: typeof units[number]) =>
 												{index}. {lesson.data.title}
 											</a>
 										</div>
-										{currentUrl.endsWith(lesson.slug) && (
+										{headings && (
 											<ul class="on-this-page">
 												{headings
 													.filter(({ depth }) => depth <= 2)
