refactor: make nested TutorialNav logic a little more obvious

--- a/src/components/tutorial/TutorialNav.astro
+++ b/src/components/tutorial/TutorialNav.astro
@@ -42,8 +42,6 @@ const isCurrentUnit = (unit: typeof units[number]) =>
 						<ol class="lessons">
 							{unit.lessons.map(async (lesson, index) => {
 								const slugWithoutLang = stripLangFromSlug(lesson.slug);
-								const headings =
-									currentUrl.endsWith(lesson.slug) && (await lesson.render()).headings;
 								return (
 									<li>
 										<div>
@@ -56,9 +54,9 @@ const isCurrentUnit = (unit: typeof units[number]) =>
 												{index}. {lesson.data.title}
 											</a>
 										</div>
-										{headings && (
+										{currentUrl.endsWith(lesson.slug) && (
 											<ul class="on-this-page">
-												{headings
+												{(await lesson.render()).headings
 													.filter(({ depth }) => depth <= 2)
 													.map((h) => (
 														<li>
