--- a/src/components/tutorial/FeedbackButton.astro
+++ b/src/components/tutorial/FeedbackButton.astro
@@ -1,19 +1,10 @@
 ---
 import UIString from '../UIString.astro';
-
-const currentUrl = Astro.url.pathname.replace(/\/$/, '');
+import FeedbackFish from "./FeedbackFish.jsx"
 ---
-
-<button data-feedback-fish data-feedback-fish-url={currentUrl}>
-	<UIString key="feedback.button" />
-</button>
-<script>
-	const script = document.createElement('script');
-	script.setAttribute('defer', '');
-	script.setAttribute('src', 'https://feedback.fish/ff.js?pid=1b24b5d16c81bd');
-	document.body.append(script);
-</script>
-
+<div>
+	<FeedbackFish client:visible/>
+</div>
 <style>
 	button {
 		border: 1px solid var(--theme-shade-subtle);
