Add CopyButton to ShikiBlock

--- a/src/components/CodeSnippet/CodeSnippet.astro
+++ b/src/components/CodeSnippet/CodeSnippet.astro
@@ -262,6 +262,26 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 					}
 				}
 			}
+
+			.copy-button {
+				position: absolute;
+				right: 1rem;
+				cursor: pointer;
+				border-radius: 0.4rem;
+				visibility: hidden;
+				opacity: 0;
+				-webkit-transition: visibility 0s, opacity 0.3s linear;
+				-moz-transition: visibility 0s, opacity 0.3s linear;
+				-o-transition: visibility 0s, opacity 0.3s linear;
+				transition: visibility 0s, opacity 0.3s linear;
+			}
+			
+			&:hover {
+				.copy-button {
+					visibility: visible;
+					opacity: 1;
+				}
+			}
 		}
 
 		&.has-title {
