addEventListener to CopyButton

--- a/src/components/CodeSnippet/CodeSnippet.astro
+++ b/src/components/CodeSnippet/CodeSnippet.astro
@@ -338,3 +338,14 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 	<figcaption class="header">{titleHtml && <span class="title" set:html={titleHtml} />}</figcaption>
 	<Fragment set:html={codeSnippetHtml} />
 </figure>
+<script>
+	// Find all buttons with the \`copy-button\` class on page.
+	const buttons = document.querySelectorAll('button.copy-button');
+	
+	// Handle clicks on each button.
+	buttons.forEach((button) => {
+		button.addEventListener('click', () => {
+			alert('Test CopyButton EventHandler')
+		})
+	})
+</script>
