--- a/src/components/tutorial/FeedbackButton.astro
+++ b/src/components/tutorial/FeedbackButton.astro
@@ -4,7 +4,7 @@ import UIString from '../UIString.astro';
 const currentUrl = Astro.url.pathname.replace(/\/$/, '');
 ---
 
-<button data-feedback-fish data-feedback-fish-url={currentUrl}>
+<button data-feedback-fish data-feedback-fish-url={currentUrl} disabled>
 	<UIString key="feedback.button" />
 </button>
 <script>
@@ -29,6 +29,10 @@ const currentUrl = Astro.url.pathname.replace(/\/$/, '');
 		const script = document.createElement('script');
 		script.setAttribute('defer', '');
 		script.setAttribute('src', 'https://feedback.fish/ff.js?pid=1b24b5d16c81bd');
+		script.onload = () =>
+			buttons.forEach((button) => {
+				button.disabled = false;
+			});
 		document.body.append(script);
 	});
 </script>
