--- a/public/theme.css
+++ b/public/theme.css
@@ -1,7 +1,8 @@
 /*
 	Define common sizes and spacings
 */
-:root {
+:root,
+::backdrop {
 	--theme-navbar-height: 6rem;
 	--theme-mobile-toc-height: 4rem;
 	--theme-left-sidebar-width: 18rem;
@@ -49,7 +50,8 @@
 /*
 	Define common fonts and colors
 */
-:root {
+:root,
+::backdrop {
 	--font-fallback: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif,
 		Apple Color Emoji, Segoe UI Emoji;
 	--font-body: system-ui, var(--font-fallback);
@@ -105,7 +107,8 @@
 	--color-yellow: var(--color-base-yellow), 59%;
 }
 
-:root {
+:root,
+::backdrop {
 	color-scheme: light;
 	--theme-accent: hsla(var(--color-orange), 1);
 	--theme-accent-secondary: hsl(324, 75%, 38%);
@@ -124,6 +127,7 @@
 	--theme-bg-hover: hsla(var(--color-purple), 0.075);
 	--theme-bg-offset: hsla(var(--color-purple), 0.1);
 	--theme-bg-accent: hsla(var(--color-purple), var(--theme-accent-opacity));
+	--theme-backdrop-overlay: hsla(var(--color-gray-50), 0.8);
 	--theme-code-inline-bg: hsla(var(--color-purple), 0.1);
 	--theme-code-inline-text: var(--theme-text);
 	--theme-code-bg: hsla(257, 31%, 22%, 1);
@@ -154,7 +158,8 @@
 	--theme-glow-blur: 10px;
 }
 
-:root.theme-dark {
+:root.theme-dark,
+.theme-dark ::backdrop {
 	color-scheme: dark;
 	/* We lighten-up the orange in dark mode, to help with link contrast. */
 	--color-orange: var(--color-base-orange), 60%;
@@ -175,6 +180,7 @@
 	--theme-bg-gradient-bottom: hsl(251, 29%, 11%);
 	--theme-bg-hover: hsla(var(--color-purple), 0.2);
 	--theme-bg-offset: #0008;
+	--theme-backdrop-overlay: hsla(var(--color-gray-10), 0.8);
 	--theme-code-inline-bg: #ffffff16;
 	--theme-code-inline-text: var(--theme-text-light);
 	--theme-code-bg: hsla(257, 31%, 11%, 1);
