--- a/src/components/tutorial/FeedbackButton.astro
+++ b/src/components/tutorial/FeedbackButton.astro
@@ -1,44 +1,250 @@
 ---
 import UIString from '../UIString.astro';
 
-const currentUrl = Astro.url.pathname.replace(/\/$/, '');
+const categories = [
+	{
+		category: 'issue',
+		icon: `M12 16a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm10.67 1.47-8.05-14a3 3 0 0 0-5.24 0l-8 14A3 3 0 0 0 3.94 22h16.12a3 3 0 0 0 2.61-4.53Zm-1.73 2a1 1 0 0 1-.88.51H3.94a1 1 0 0 1-.88-.51 1 1 0 0 1 0-1l8-14a1 1 0 0 1 1.78 0l8.05 14a1 1 0 0 1 .05 1.02v-.02ZM12 8a1 1 0 0 0-1 1v4a1 1 0 0 0 2 0V9a1 1 0 0 0-1-1Z`,
+	},
+	{
+		category: 'idea',
+		icon: `M17.09 2.82A8 8 0 0 0 5.86 14.13c.7.8 1.1 1.8 1.14 2.87v3a3 3 0 0 0 3 3h4a3 3 0 0 0 3-3v-2.81c.03-1.17.46-2.3 1.22-3.19a8 8 0 0 0-1.13-11.2v.02ZM15 20a1 1 0 0 1-1 1h-4a1 1 0 0 1-1-1v-1h6v1Zm1.67-7.24c-1 1.2-1.6 2.68-1.67 4.24h-2v-3a1 1 0 0 0-2 0v3H9a6.5 6.5 0 0 0-1.6-4.16 6 6 0 1 1 9.27-.08Z`,
+	},
+	{
+		category: 'other',
+		icon: `M12 10a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm14 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Z`,
+	},
+];
+
+const instanceId = Math.round(Math.random() * 10e9).toString(36);
 ---
 
-<button data-feedback-fish data-feedback-fish-url={currentUrl} disabled>
-	<UIString key="feedback.button" />
-</button>
+<feedback-form>
+	<button data-open-modal disabled>
+		<UIString key="feedback.button" />
+	</button>
+	<dialog style="padding:0" aria-labelledby={'heading' + instanceId}>
+		<form method="dialog" style="padding:var(--feedback-form-padding, 1rem)">
+			<header>
+				<h1 id={'heading' + instanceId}>What’s on your mind?</h1>
+				<button data-close-modal
+					><span class="sr-only">Close</span>
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						fill="currentcolor"
+						viewBox="0 0 24 24"
+						aria-hidden="true"
+					>
+						<path
+							d="m13.41 12 6.3-6.29a1 1 0 1 0-1.42-1.42L12 10.59l-6.29-6.3a1 1 0 0 0-1.42 1.42l6.3 6.29-6.3 6.29a1 1 0 0 0 .33 1.64 1 1 0 0 0 1.09-.22l6.29-6.3 6.29 6.3a1 1 0 0 0 1.64-.33 1 1 0 0 0-.22-1.09L13.41 12Z"
+						></path>
+					</svg>
+				</button>
+			</header>
+			<p class="category-options">
+				{
+					categories.map(({ category, icon }, index) => (
+						<span class="category-option">
+							<input
+								class="sr-only"
+								id={category + instanceId}
+								type="radio"
+								name="category"
+								value={category}
+								checked={index === 0}
+							/>
+							<label for={category + instanceId}>
+								<svg
+									aria-hidden="true"
+									xmlns="http://www.w3.org/2000/svg"
+									fill="currentcolor"
+									viewBox="0 0 24 24"
+								>
+									<path d={icon} />
+								</svg>
+								<span>{category}</span>
+							</label>
+						</span>
+					))
+				}
+			</p>
+			<label for={'textarea' + instanceId} class="sr-only">Feedback message</label>
+			<textarea
+				id={'textarea' + instanceId}
+				name="text"
+				cols="34"
+				rows="3"
+				required
+				placeholder="I found that…"></textarea>
+			<button type="submit">Send feedback</button>
+		</form>
+	</dialog>
+</feedback-form>
+
 <script>
-	type ElementList = ReturnType<typeof document.querySelectorAll>;
+	class FeedbackForm extends HTMLElement {
+		constructor() {
+			super();
 
-	// Based on https://github.com/withastro/astro/blob/main/packages/astro/src/runtime/client/visible.ts
-	const onVisible = <T extends ElementList>(nodes: T, callback: () => void) => {
-		const io = new IntersectionObserver((entries) => {
-			for (const { isIntersecting } of entries) {
-				if (!isIntersecting) continue;
-				// As soon as we hydrate, disconnect this IntersectionObserver.
-				io.disconnect();
-				callback();
-				break; // Break loop on first match.
-			}
-		});
-		for (const node of nodes) io.observe(node);
-	};
+			const openBtn = this.querySelector<HTMLButtonElement>('button[data-open-modal]')!;
+			const closeBtn = this.querySelector<HTMLButtonElement>('button[data-close-modal]')!;
+			const dialog = this.querySelector('dialog')!;
+			const form = this.querySelector('form')!;
 
-	const buttons = document.querySelectorAll<HTMLButtonElement>('button[data-feedback-fish]');
-	onVisible(buttons, () => {
-		const script = document.createElement('script');
-		script.setAttribute('defer', '');
-		script.setAttribute('src', 'https://feedback.fish/ff.js?pid=1b24b5d16c81bd');
-		script.onload = () =>
-			buttons.forEach((button) => {
-				button.disabled = false;
+			openBtn.addEventListener('click', (event) => {
+				dialog.showModal();
+				event.stopPropagation();
+				window.addEventListener(
+					'click',
+					(event) => !form.contains(event.target as Node) && dialog.close()
+				);
 			});
-		document.body.append(script);
-	});
+
+			closeBtn.addEventListener('click', () => dialog.close());
+
+			form.addEventListener('submit', async () => {
+				try {
+					const text = form.text.value;
+					const category = form.category.value;
+					const res = await fetch('https://api.feedback.fish/feedback', {
+						method: 'POST',
+						headers: { 'Content-Type': 'application/json' },
+						body: JSON.stringify({
+							projectId: '1b24b5d16c81bd',
+							text,
+							category,
+							metadata: { url: location.pathname.replace(/\/$/, '') },
+						}),
+					});
+					if (!res.ok) throw new Error(res.statusText);
+					const data = await res.json();
+					if (data.error) throw new Error(data.error);
+				} catch (e) {
+					console.error('Error submitting feedback form\n', e);
+				}
+			});
+
+			openBtn.disabled = false;
+		}
+	}
+	customElements.define('feedback-form', FeedbackForm);
 </script>
 
 <style>
-	button {
+	dialog {
+		margin: 4rem auto auto;
+		border: 1px solid var(--theme-divider);
+		border-radius: 0.5rem;
+		background-color: var(--theme-bg);
+		box-shadow: 0 0.75rem 2.5rem rgba(0, 0, 0, 0.2);
+		box-shadow: 0 0.75rem 1rem var(--theme-backdrop-overlay);
+		/* box-shadow: var(--docsearch-modal-shadow); */
+	}
+
+	dialog::backdrop {
+		background-color: var(--theme-backdrop-overlay);
+	}
+
+	form {
+		display: flex;
+		flex-direction: column;
+		gap: 0.75rem;
+	}
+
+	form * {
+		margin: 0;
+	}
+
+	form header {
+		display: grid;
+		grid-template-columns: 1fr auto 1fr;
+		gap: 1rem;
+	}
+
+	form h1 {
+		font-size: 1.125rem;
+		font-weight: bold;
+		grid-column: 2 / 3;
+	}
+
+	.category-options {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		gap: 0.75rem;
+	}
+
+	.category-option label {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+		padding: 0.5rem;
+		gap: 0.25rem;
+		font-size: 0.875rem;
+		outline: 2px solid transparent;
+		border: 2px solid transparent;
+		border-radius: 1rem;
+		cursor: pointer;
+	}
+
+	.category-option label:hover {
+		background-color: var(--theme-bg-hover);
+	}
+
+	.category-option input:checked + label {
+		background-color: var(--theme-bg-accent);
+		border-color: var(--theme-shade-subtle);
+	}
+
+	dialog *:focus,
+	.category-option input:focus + label {
+		outline: 2px solid var(--theme-accent-secondary);
+	}
+
+	.category-option svg {
+		color: var(--theme-text);
+		width: 2rem;
+	}
+
+	textarea {
+		border: 2px solid var(--theme-dim-lighter);
+		border-radius: 0.5rem;
+		resize: none;
+		line-height: 1.5;
+		padding: 0.5rem;
+		font-family: inherit;
+		font-size: 0.875rem;
+	}
+
+	button[type='submit'] {
+		border: 1px solid var(--theme-shade-subtle);
+		background-color: transparent;
+		font: inherit;
+		padding: 0.5rem;
+		border-radius: 0.5rem;
+		cursor: pointer;
+	}
+
+	form:invalid button[type='submit'] {
+		opacity: 0.5;
+	}
+
+	button[data-close-modal] {
+		display: flex;
+		border: 0;
+		padding: 0.125rem;
+		background-color: transparent;
+		width: 1.5rem;
+		justify-self: flex-end;
+		color: var(--theme-text-lighter);
+		cursor: pointer;
+	}
+
+	button[data-close-modal]:hover {
+		color: var(--theme-text);
+	}
+
+	button[data-open-modal] {
 		border: 1px solid var(--theme-shade-subtle);
 		border-radius: 0.5rem;
 		background-color: transparent;
@@ -47,12 +253,12 @@ const currentUrl = Astro.url.pathname.replace(/\/$/, '');
 		line-height: calc(1 / var(--theme-text-xs));
 	}
 
-	button:hover,
-	button:focus {
+	button[data-open-modal]:hover,
+	button[data-open-modal]:focus {
 		background-color: var(--theme-divider);
 	}
 
-	button:focus:not(:focus-visible) {
+	button[data-open-modal]:focus:not(:focus-visible) {
 		background-color: transparent;
 	}
 </style>
