Make feedback modal translatable

--- a/src/components/tutorial/FeedbackButton.astro
+++ b/src/components/tutorial/FeedbackButton.astro
@@ -14,7 +14,7 @@ const categories = [
 		category: 'other',
 		icon: `M12 10a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm14 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Z`,
 	},
-];
+] as const;
 
 const instanceId = Math.round(Math.random() * 10e9).toString(36);
 ---
@@ -26,9 +26,9 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 	<dialog style="padding:0" aria-labelledby={'heading' + instanceId}>
 		<form method="dialog" style="padding:var(--feedback-form-padding, 1rem)">
 			<header>
-				<h1 id={'heading' + instanceId}>What’s on your mind?</h1>
+				<h1 id={'heading' + instanceId}><UIString key="feedback.modalTitle" /></h1>
 				<button data-close-modal
-					><span class="sr-only">Close</span>
+					><span class="sr-only"><UIString key="feedback.close" /></span>
 					<svg
 						xmlns="http://www.w3.org/2000/svg"
 						fill="currentcolor"
@@ -62,13 +62,17 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 								>
 									<path d={icon} />
 								</svg>
-								<span>{category}</span>
+								<span>
+									<UIString key={`feedback.${category}`} />
+								</span>
 							</label>
 						</span>
 					))
 				}
 			</p>
-			<label for={'textarea' + instanceId} class="sr-only">Feedback message</label>
+			<label for={'textarea' + instanceId} class="sr-only">
+				<UIString key="feedback.messageA11yLabel" />
+			</label>
 			<textarea
 				id={'textarea' + instanceId}
 				name="text"
@@ -76,7 +80,7 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 				rows="3"
 				required
 				placeholder="I found that…"></textarea>
-			<button type="submit">Send feedback</button>
+			<button type="submit"><UIString key="feedback.submit" /></button>
 		</form>
 	</dialog>
 </feedback-form>
