Reset form when submitting

--- a/src/components/tutorial/FeedbackButton.astro
+++ b/src/components/tutorial/FeedbackButton.astro
@@ -110,6 +110,7 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 				try {
 					const text = form.text.value;
 					const category = form.category.value;
+					form.reset();
 					const res = await fetch('https://api.feedback.fish/feedback', {
 						method: 'POST',
 						headers: { 'Content-Type': 'application/json' },
