Don’t leak click outside listener

--- a/src/components/tutorial/FeedbackButton.astro
+++ b/src/components/tutorial/FeedbackButton.astro
@@ -95,16 +95,25 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 			const dialog = this.querySelector('dialog')!;
 			const form = this.querySelector('form')!;
 
-			openBtn.addEventListener('click', (event) => {
-				dialog.showModal();
-				event.stopPropagation();
-				window.addEventListener(
-					'click',
-					(event) => !form.contains(event.target as Node) && dialog.close()
-				);
-			});
+			/** Close the modal if a user clicks outside of the modal. */
+			const onWindowClick = (event: MouseEvent) => {
+				if (!form.contains(event.target as Node)) closeModal();
+			};
 
-			closeBtn.addEventListener('click', () => dialog.close());
+			const openModal = (event: MouseEvent) => {
+				dialog.showModal();
+				// Prevent click bubbling up and immediately closing the modal again.
+				event.stopPropagation();
+				window.addEventListener('click', onWindowClick);
+			};
+
+			const closeModal = () => {
+				dialog.close();
+				window.removeEventListener('click', onWindowClick);
+			};
+
+			openBtn.addEventListener('click', openModal);
+			closeBtn.addEventListener('click', closeModal);
 
 			form.addEventListener('submit', async () => {
 				try {
