--- a/src/components/tutorial/FeedbackButton.astro
+++ b/src/components/tutorial/FeedbackButton.astro
@@ -146,13 +146,17 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 
 <style>
 	dialog {
-		margin: 4rem auto auto;
+		margin: 1.5rem auto auto;
 		border: 1px solid var(--theme-divider);
 		border-radius: 0.5rem;
 		background-color: var(--theme-bg);
-		box-shadow: 0 0.75rem 2.5rem rgba(0, 0, 0, 0.2);
 		box-shadow: 0 0.75rem 1rem var(--theme-backdrop-overlay);
-		/* box-shadow: var(--docsearch-modal-shadow); */
+	}
+
+	@media (min-width: 30em) {
+		dialog {
+			margin-top: 4rem;
+		}
 	}
 
 	dialog::backdrop {
@@ -176,7 +180,7 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 	}
 
 	form h1 {
-		font-size: 1.125rem;
+		font-size: 1.25rem;
 		font-weight: bold;
 		grid-column: 2 / 3;
 	}
@@ -192,9 +196,10 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 		flex-direction: column;
 		align-items: center;
 		text-align: center;
-		padding: 0.5rem;
+		padding: 0.75rem;
 		gap: 0.25rem;
 		font-size: 0.875rem;
+		font-weight: 600;
 		outline: 2px solid transparent;
 		border: 2px solid transparent;
 		border-radius: 1rem;
@@ -217,7 +222,7 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 
 	.category-option svg {
 		color: var(--theme-text);
-		width: 2rem;
+		width: 2.25rem;
 	}
 
 	textarea {
