Actually use placeholder translation string

--- a/src/components/tutorial/FeedbackButton.astro
+++ b/src/components/tutorial/FeedbackButton.astro
@@ -1,5 +1,8 @@
 ---
+import { useTranslations } from '~/i18n/util';
 import UIString from '../UIString.astro';
+
+const t = useTranslations(Astro);
 
 const categories = [
 	{
@@ -79,7 +82,7 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 				cols="34"
 				rows="3"
 				required
-				placeholder="I found that…"></textarea>
+				placeholder={t('feedback.placeholder')}></textarea>
 			<button type="submit"><UIString key="feedback.submit" /></button>
 		</form>
 	</dialog>
