initial baas setup

--- a/src/layouts/LayoutSwitcher.astro
+++ b/src/layouts/LayoutSwitcher.astro
@@ -1,6 +1,7 @@
 ---
 import type { MarkdownHeading } from 'astro';
 import type { CollectionEntry } from 'astro:content';
+import BackendAsAServiceLayout from '~/layouts/BackendAsAServiceLayout.astro';
 import CMSLayout from '~/layouts/CMSLayout.astro';
 import DeployGuideLayout from '~/layouts/DeployGuideLayout.astro';
 import IntegrationLayout from '~/layouts/IntegrationLayout.astro';
@@ -17,7 +18,11 @@ const { data, headings } = Astro.props;
 ---
 
 {
-	data.type === 'cms' ? (
+	data.type === 'baas' ? (
+		<BackendAsAServiceLayout content={data} headings={headings}>
+			<slot />
+		</BackendAsAServiceLayout>
+	) : data.type === 'cms' ? (
 		<CMSLayout content={data} headings={headings}>
 			<slot />
 		</CMSLayout>
