--- a/src/components/tutorial/FeedbackButton.astro
+++ b/src/components/tutorial/FeedbackButton.astro
@@ -27,64 +27,67 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 		<UIString key="feedback.button" />
 	</button>
 	<dialog style="padding:0" aria-labelledby={'heading' + instanceId}>
-		<form method="dialog" style="padding:var(--feedback-form-padding, 1rem)">
-			<header>
+		<div class="dialog-frame">
+			<button data-close-modal
+				><span class="sr-only"><UIString key="feedback.close" /></span>
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					fill="currentcolor"
+					viewBox="0 0 24 24"
+					aria-hidden="true"
+				>
+					<path
+						d="m13.41 12 6.3-6.29a1 1 0 1 0-1.42-1.42L12 10.59l-6.29-6.3a1 1 0 0 0-1.42 1.42l6.3 6.29-6.3 6.29a1 1 0 0 0 .33 1.64 1 1 0 0 0 1.09-.22l6.29-6.3 6.29 6.3a1 1 0 0 0 1.64-.33 1 1 0 0 0-.22-1.09L13.41 12Z"
+					></path>
+				</svg>
+			</button>
+			<form tabindex="-1">
 				<h1 id={'heading' + instanceId}><UIString key="feedback.modalTitle" /></h1>
-				<button data-close-modal
-					><span class="sr-only"><UIString key="feedback.close" /></span>
-					<svg
-						xmlns="http://www.w3.org/2000/svg"
-						fill="currentcolor"
-						viewBox="0 0 24 24"
-						aria-hidden="true"
-					>
-						<path
-							d="m13.41 12 6.3-6.29a1 1 0 1 0-1.42-1.42L12 10.59l-6.29-6.3a1 1 0 0 0-1.42 1.42l6.3 6.29-6.3 6.29a1 1 0 0 0 .33 1.64 1 1 0 0 0 1.09-.22l6.29-6.3 6.29 6.3a1 1 0 0 0 1.64-.33 1 1 0 0 0-.22-1.09L13.41 12Z"
-						></path>
-					</svg>
-				</button>
-			</header>
-			<p class="category-options">
-				{
-					categories.map(({ category, icon }, index) => (
-						<span class="category-option">
-							<input
-								class="sr-only"
-								id={category + instanceId}
-								type="radio"
-								name="category"
-								value={category}
-								checked={index === 0}
-							/>
-							<label for={category + instanceId}>
-								<svg
-									aria-hidden="true"
-									xmlns="http://www.w3.org/2000/svg"
-									fill="currentcolor"
-									viewBox="0 0 24 24"
-								>
-									<path d={icon} />
-								</svg>
-								<span>
-									<UIString key={`feedback.${category}`} />
-								</span>
-							</label>
-						</span>
-					))
-				}
-			</p>
-			<label for={'textarea' + instanceId} class="sr-only">
-				<UIString key="feedback.messageA11yLabel" />
-			</label>
-			<textarea
-				id={'textarea' + instanceId}
-				name="text"
-				cols="34"
-				rows="3"
-				required
-				placeholder={t('feedback.placeholder')}></textarea>
-			<button type="submit"><UIString key="feedback.submit" /></button>
-		</form>
+				<p class="category-options">
+					{
+						categories.map(({ category, icon }, index) => (
+							<span class="category-option">
+								<input
+									class="sr-only"
+									id={category + instanceId}
+									type="radio"
+									name="category"
+									value={category}
+									checked={index === 0}
+								/>
+								<label for={category + instanceId}>
+									<svg
+										aria-hidden="true"
+										xmlns="http://www.w3.org/2000/svg"
+										fill="currentcolor"
+										viewBox="0 0 24 24"
+									>
+										<path d={icon} />
+									</svg>
+									<span>
+										<UIString key={`feedback.${category}`} />
+									</span>
+								</label>
+							</span>
+						))
+					}
+				</p>
+				<label for={'textarea' + instanceId} class="sr-only">
+					<UIString key="feedback.messageA11yLabel" />
+				</label>
+				<textarea
+					id={'textarea' + instanceId}
+					name="text"
+					cols="34"
+					rows="3"
+					required
+					placeholder={t('feedback.placeholder')}></textarea>
+				<button type="submit"><UIString key="feedback.submit" /></button>
+			</form>
+			<div class="success-pane" hidden tabindex="-1">
+				<p>Thanks! We received your feedback.</p>
+			</div>
+		</div>
 	</dialog>
 </feedback-form>
 
@@ -95,16 +98,27 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 
 			const openBtn = this.querySelector<HTMLButtonElement>('button[data-open-modal]')!;
 			const closeBtn = this.querySelector<HTMLButtonElement>('button[data-close-modal]')!;
+			const submitBtn = this.querySelector<HTMLButtonElement>('button[type="submit"]')!;
 			const dialog = this.querySelector('dialog')!;
+			const dialogFrame = this.querySelector('.dialog-frame')!;
 			const form = this.querySelector('form')!;
+			const success = this.querySelector<HTMLDivElement>('div.success-pane')!;
+
+			const setSuccess = (val: boolean) => {
+				form.hidden = val;
+				success.hidden = !val;
+				if (val) success.focus();
+			};
 
 			/** Close the modal if a user clicks outside of the modal. */
 			const onWindowClick = (event: MouseEvent) => {
-				if (!form.contains(event.target as Node)) closeModal();
+				if (!dialogFrame.contains(event.target as Node)) closeModal();
 			};
 
 			const openModal = (event: MouseEvent) => {
+				setSuccess(false);
 				dialog.showModal();
+				(form.elements[0] as HTMLInputElement).focus();
 				// Prevent click bubbling up and immediately closing the modal again.
 				event.stopPropagation();
 				window.addEventListener('click', onWindowClick);
@@ -118,16 +132,17 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 			openBtn.addEventListener('click', openModal);
 			closeBtn.addEventListener('click', closeModal);
 
-			form.addEventListener('submit', async () => {
+			form.addEventListener('submit', async (event) => {
+				event.preventDefault();
+				submitBtn.disabled = true;
 				try {
 					const text = form.text.value;
 					const category = form.category.value;
-					form.reset();
 					const res = await fetch('https://api.feedback.fish/feedback', {
 						method: 'POST',
 						headers: { 'Content-Type': 'application/json' },
 						body: JSON.stringify({
-							projectId: '1b24b5d16c81bd',
+							projectId: '...', //'1b24b5d16c81bd',
 							text,
 							category,
 							metadata: { url: location.pathname.replace(/\/$/, '') },
@@ -139,6 +154,9 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 				} catch (e) {
 					console.error('Error submitting feedback form\n', e);
 				}
+				setSuccess(true);
+				submitBtn.disabled = false;
+				form.reset();
 			});
 
 			openBtn.disabled = false;
@@ -148,10 +166,16 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 </script>
 
 <style>
+	feedback-form {
+		--feedback-form-padding: 1rem;
+		--feedback-form-close-icon-size: 1.5rem;
+	}
+
 	dialog {
 		margin: 1.5rem auto auto;
 		border: 1px solid var(--theme-divider);
 		border-radius: 0.5rem;
+		width: 25rem;
 		background-color: var(--theme-bg);
 		box-shadow: 0 0.75rem 1rem var(--theme-backdrop-overlay);
 	}
@@ -166,23 +190,30 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 		background-color: var(--theme-backdrop-overlay);
 	}
 
-	form {
-		display: flex;
-		flex-direction: column;
-		gap: 0.75rem;
-	}
-
-	form * {
+	dialog * {
 		margin: 0;
 	}
 
-	form header {
+	dialog header {
 		display: grid;
 		grid-template-columns: 1fr auto 1fr;
 		gap: 1rem;
 	}
 
+	.dialog-frame {
+		display: flex;
+		flex-direction: column;
+		gap: 0.75rem;
+		text-align: center;
+		padding: var(--feedback-form-padding);
+	}
+
+	form {
+		display: contents;
+	}
+
 	form h1 {
+		padding: 0 calc(var(--feedback-form-close-icon-size) + var(--feedback-form-padding));
 		font-size: 1.25rem;
 		font-weight: bold;
 		grid-column: 2 / 3;
@@ -198,7 +229,6 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		text-align: center;
 		padding: 0.75rem;
 		gap: 0.25rem;
 		font-size: 0.875rem;
@@ -251,12 +281,19 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 		opacity: 0.5;
 	}
 
+	.success-pane {
+		padding: 2rem;
+	}
+
 	button[data-close-modal] {
+		position: absolute;
+		top: var(--feedback-form-padding);
+		right: var(--feedback-form-padding);
 		display: flex;
 		border: 0;
 		padding: 0.125rem;
 		background-color: transparent;
-		width: 1.5rem;
+		width: var(--feedback-form-close-icon-size);
 		justify-self: flex-end;
 		color: var(--theme-text-lighter);
 		cursor: pointer;
@@ -282,5 +319,9 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 
 	button[data-open-modal]:focus:not(:focus-visible) {
 		background-color: transparent;
+	}
+
+	[hidden] {
+		display: none;
 	}
 </style>
