Add Houston to thank you screen

--- a/src/components/tutorial/FeedbackButton.astro
+++ b/src/components/tutorial/FeedbackButton.astro
@@ -1,6 +1,7 @@
 ---
 import { useTranslations } from '~/i18n/util';
 import UIString from '../UIString.astro';
+import houston from './houston-happy.webp';
 
 const t = useTranslations(Astro);
 
@@ -85,6 +86,7 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 				<button type="submit"><UIString key="feedback.submit" /></button>
 			</form>
 			<div class="success-pane" hidden tabindex="-1">
+				<img src={houston} alt="" width="128" height="128" />
 				<p>Thanks! We received your feedback.</p>
 			</div>
 		</div>
