Fix close modal icon in Safari

--- a/src/components/tutorial/FeedbackButton.astro
+++ b/src/components/tutorial/FeedbackButton.astro
@@ -36,6 +36,8 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 					fill="currentcolor"
 					viewBox="0 0 24 24"
 					aria-hidden="true"
+					width="24"
+					height="24"
 				>
 					<path
 						d="m13.41 12 6.3-6.29a1 1 0 1 0-1.42-1.42L12 10.59l-6.29-6.3a1 1 0 0 0-1.42 1.42l6.3 6.29-6.3 6.29a1 1 0 0 0 .33 1.64 1 1 0 0 0 1.09-.22l6.29-6.3 6.29 6.3a1 1 0 0 0 1.64-.33 1 1 0 0 0-.22-1.09L13.41 12Z"
