Add accessible labels and use fieldset to wrap categories

--- a/src/components/tutorial/FeedbackButton.astro
+++ b/src/components/tutorial/FeedbackButton.astro
@@ -27,7 +27,7 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 	<button data-open-modal disabled>
 		<UIString key="feedback.button" />
 	</button>
-	<dialog style="padding:0" aria-labelledby={'heading' + instanceId}>
+	<dialog style="padding:0" aria-label={t('feedback.a11yLabel')}>
 		<div class="dialog-frame">
 			<button data-close-modal
 				><span class="sr-only"><UIString key="feedback.close" /></span>
@@ -44,9 +44,10 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 					></path>
 				</svg>
 			</button>
-			<form tabindex="-1">
-				<h1 id={'heading' + instanceId}><UIString key="feedback.modalTitle" /></h1>
-				<p class="category-options">
+			<form>
+				<h1><UIString key="feedback.formTitle" /></h1>
+				<fieldset class="category-options">
+					<legend class="sr-only"><UIString key={'feedback.categoryGroupLabel'} /></legend>
 					{
 						categories.map(({ category, icon }, index) => (
 							<span class="category-option">
@@ -74,7 +75,7 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 							</span>
 						))
 					}
-				</p>
+				</fieldset>
 				<label for={'textarea' + instanceId} class="sr-only">
 					<UIString key="feedback.messageA11yLabel" />
 				</label>
@@ -122,7 +123,7 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 			const openModal = (event: MouseEvent) => {
 				setSuccess(false);
 				dialog.showModal();
-				(form.elements[0] as HTMLInputElement).focus();
+				form.querySelector('input')?.focus();
 				// Prevent click bubbling up and immediately closing the modal again.
 				event.stopPropagation();
 				window.addEventListener('click', onWindowClick);
@@ -221,6 +222,11 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 		font-size: 1.25rem;
 		font-weight: bold;
 		grid-column: 2 / 3;
+	}
+
+	fieldset {
+		border: 0;
+		padding: 0;
 	}
 
 	.category-options {
