--- a/src/components/tutorial/FeedbackButton.astro
+++ b/src/components/tutorial/FeedbackButton.astro
@@ -147,7 +147,7 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 						method: 'POST',
 						headers: { 'Content-Type': 'application/json' },
 						body: JSON.stringify({
-							projectId: '...', //'1b24b5d16c81bd',
+							projectId: '1b24b5d16c81bd',
 							text,
 							category,
 							metadata: { url: location.pathname.replace(/\/$/, '') },
