Tweak font sizes

--- a/public/theme.css
+++ b/public/theme.css
@@ -17,6 +17,7 @@
 	--max-width: 100%;
 	--cur-viewport-height: 100vh;
 	/* Font sizes */
+	--theme-text-lg: 1.25rem;
 	--theme-text-base: 1rem;
 	--theme-text-sm: 0.9375rem;
 	--theme-text-xs: 0.875rem;
