--- a/src/components/tutorial/FeedbackButton.astro
+++ b/src/components/tutorial/FeedbackButton.astro
@@ -177,6 +177,7 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 	}
 
 	dialog {
+		font-size: var(--theme-text-base);
 		margin: 1.5rem auto auto;
 		border: 1px solid var(--theme-divider);
 		border-radius: 0.5rem;
@@ -219,7 +220,7 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 
 	form h1 {
 		padding: 0 calc(var(--feedback-form-close-icon-size) + var(--feedback-form-padding));
-		font-size: 1.25rem;
+		font-size: var(--theme-text-lg);
 		font-weight: bold;
 		grid-column: 2 / 3;
 	}
@@ -241,7 +242,7 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 		align-items: center;
 		padding: 0.75rem;
 		gap: 0.25rem;
-		font-size: 0.875rem;
+		font-size: var(--theme-text-xs);
 		font-weight: 600;
 		outline: 2px solid transparent;
 		border: 2px solid transparent;
@@ -275,13 +276,14 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 		line-height: 1.5;
 		padding: 0.5rem;
 		font-family: inherit;
-		font-size: 0.875rem;
+		font-size: var(--theme-text-xs);
 	}
 
 	button[type='submit'] {
 		border: 1px solid var(--theme-shade-subtle);
 		background-color: transparent;
 		font: inherit;
+		font-size: var(--theme-text-sm);
 		padding: 0.5rem;
 		border-radius: 0.5rem;
 		cursor: pointer;
