Remove unnecessary `::backdrop` CSS

--- a/public/theme.css
+++ b/public/theme.css
@@ -1,8 +1,7 @@
 /*
 	Define common sizes and spacings
 */
-:root,
-::backdrop {
+:root {
 	--theme-navbar-height: 6rem;
 	--theme-mobile-toc-height: 4rem;
 	--theme-left-sidebar-width: 18rem;
