Focus `:checked` input on modal open

--- a/src/components/tutorial/FeedbackButton.astro
+++ b/src/components/tutorial/FeedbackButton.astro
@@ -124,7 +124,7 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 			const openModal = (event: MouseEvent) => {
 				showSuccess(false);
 				dialog.showModal();
-				form.querySelector('input')?.focus();
+				form.querySelector<HTMLInputElement>('input:checked')?.focus();
 				// Prevent click bubbling up and immediately closing the modal again.
 				event.stopPropagation();
 				window.addEventListener('click', onWindowClick);
