Use darker textarea background in dark mode

--- a/src/components/tutorial/FeedbackButton.astro
+++ b/src/components/tutorial/FeedbackButton.astro
@@ -280,6 +280,10 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 		font-family: inherit;
 		font-size: var(--theme-text-xs);
 	}
+	
+	:global(.theme-dark) textarea {
+		background-color: var(--theme-bg-offset);
+	}
 
 	button[type='submit'] {
 		border: 1px solid var(--theme-shade-subtle);
