Add i18n key [feedback.success] && add zh-cn translations

--- a/src/components/tutorial/FeedbackButton.astro
+++ b/src/components/tutorial/FeedbackButton.astro
@@ -91,7 +91,9 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 			</form>
 			<div class="success-pane" hidden tabindex="-1">
 				<img src={houston} alt="" width="128" height="128" />
-				<p>Thanks! We received your feedback.</p>
+				<p>
+					<UIString key="feedback.success" />
+				</p>
 			</div>
 		</div>
 	</dialog>
