Hide SVGs in header from screen readers

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -27,6 +27,7 @@ const t = useTranslations(Astro);
 							height="102"
 							viewBox="0 0 363 102"
 							fill="none"
+							aria-hidden="true"
 						>
 							<style>
 								.text {
@@ -62,6 +63,7 @@ const t = useTranslations(Astro);
 							height="102"
 							viewBox="0 0 226 102"
 							fill="none"
+							aria-hidden="true"
 						>
 							<path
 								class="docs-path"
