Add caption to terminal code snippets

--- a/src/components/CodeSnippet/CodeSnippet.astro
+++ b/src/components/CodeSnippet/CodeSnippet.astro
@@ -1,5 +1,6 @@
 ---
 import rangeParser from 'parse-numeric-range';
+import { useTranslations } from '~/i18n/util';
 import { ShikiBlock } from './shiki-block';
 import {
 	InlineMarkingDefinition,
@@ -25,6 +26,8 @@ const {
 	lineMarkings = '',
 	inlineMarkings = '',
 } = Astro.props as Props;
+
+const t = useTranslations(Astro);
 
 const isTerminal = ['shellscript', 'shell', 'bash', 'sh', 'zsh'].includes(lang);
 const intRemovedLineIndex = parseInt(removedLineIndex) || 0;
@@ -315,6 +318,14 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 		`lang-${lang}`,
 	]}
 >
-	<figcaption class="header">{titleHtml && <span class="title" set:html={titleHtml} />}</figcaption>
+	<figcaption class="header">
+		{
+			titleHtml ? (
+				<span class="title" set:html={titleHtml} />
+			) : (
+				isTerminal && <span class="sr-only">{t('codeSnippet.terminalCaption')}</span>
+			)
+		}
+	</figcaption>
 	<Fragment set:html={codeSnippetHtml} />
 </figure>
