--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -80,7 +80,7 @@ const t = useTranslations(Astro);
 			labels={{ useLight: t('themeToggle.useLight'), useDark: t('themeToggle.useDark') }}
 			isInsideHeader={true}
 		/>
-		{lang && <LanguageSelect lang={lang} client:idle />}
+		{lang && <LanguageSelect lang={lang} label={t('languageSelect.label')} client:idle />}
 		<Search {lang} labels={docsearchStrings} />
 		<SidebarToggle client:idle />
 	</nav>
