Add optional `description` support to `<CardsNav>`

--- a/src/components/NavGrid/CardsNav.astro
+++ b/src/components/NavGrid/CardsNav.astro
@@ -8,6 +8,7 @@ export interface Props {
 	minimal?: boolean;
 	links: {
 		title: string;
+		description?: string;
 		href: string;
 		logo?: LogoKey;
 		/** Map of tag IDs to translated tag display text, e.g. `{ static: 'Statisch' }`. */
@@ -25,7 +26,7 @@ const currentPage = new URL(Astro.request.url).pathname;
 	<slot />
 	<Grid minimal={minimal}>
 		{
-			links.map(({ href, logo, title, tags }) => (
+			links.map(({ description, href, logo, title, tags }) => (
 				<Card
 					{...{ minimal, logo, href }}
 					current={currentPage.includes(href)}
@@ -33,6 +34,7 @@ const currentPage = new URL(Astro.request.url).pathname;
 				>
 					<Fragment slot="title" set:html={title} />
 					<Fragment slot="details">
+						{description && <p>{description}</p>}
 						{tags && (
 							<div class="tags">
 								{Object.values(tags).map((tag) => (
