--- a/src/components/NavGrid/CardsNav.astro
+++ b/src/components/NavGrid/CardsNav.astro
@@ -34,7 +34,7 @@ const currentPage = new URL(Astro.request.url).pathname;
 				>
 					<Fragment slot="title" set:html={title} />
 					<Fragment slot="details">
-						{description && <p>{description}</p>}
+						{description && <p class="description">{description}</p>}
 						{tags && (
 							<div class="tags">
 								{Object.values(tags).map((tag) => (
@@ -53,6 +53,12 @@ const currentPage = new URL(Astro.request.url).pathname;
 	.cards-nav {
 		padding: 2rem 0;
 		accent-color: var(--theme-accent-secondary);
+	}
+
+	.description {
+		margin-top: 0.25rem;
+		color: var(--theme-text-lighter);
+		font-size: var(--theme-text-sm);
 	}
 
 	.tags {
