Fix margins on `<RecipesNav>`

--- a/src/components/RecipesNav.astro
+++ b/src/components/RecipesNav.astro
@@ -10,11 +10,20 @@ export interface Props {
 const recipes = englishPages.filter(isRecipeEntry);
 ---
 
-<CardsNav
-	minimal={Astro.props.minimal}
-	links={recipes.map(({ data, slug }) => ({
-		title: data.title,
-		description: data.description,
-		href: slug,
-	}))}
-/>
+<div>
+	<CardsNav
+		minimal={Astro.props.minimal}
+		links={recipes.map(({ data, slug }) => ({
+			title: data.title,
+			description: data.description,
+			href: slug,
+			tags: Object.fromEntries(data.tags?.map((t) => [t, t]) || []),
+		}))}
+	/>
+</div>
+
+<style>
+	div > :global(*) {
+		margin-top: -2rem;
+	}
+</style>
