Fix `<RecipesNav>` links & remove tags

--- a/src/components/RecipesNav.astro
+++ b/src/components/RecipesNav.astro
@@ -1,12 +1,14 @@
 ---
 import { englishPages } from '~/content';
 import { isRecipeEntry } from '~/content/config';
+import { getLanguageFromURL } from '~/util';
 import CardsNav from './NavGrid/CardsNav.astro';
 
 export interface Props {
 	minimal?: boolean;
 }
 
+const lang = getLanguageFromURL(Astro.url.pathname);
 const recipes = englishPages.filter(isRecipeEntry);
 ---
 
@@ -16,8 +18,7 @@ const recipes = englishPages.filter(isRecipeEntry);
 		links={recipes.map(({ data, slug }) => ({
 			title: data.title,
 			description: data.description,
-			href: slug,
-			tags: Object.fromEntries(data.tags?.map((t) => [t, t]) || []),
+			href: '/' + slug.replace('en/', `${lang}/`) + '/',
 		}))}
 	/>
 </div>
