Add skeleton for Docker deployment

--- a/src/components/DeployGuidesNav.astro
+++ b/src/components/DeployGuidesNav.astro
@@ -39,6 +39,7 @@ const services: Service[] = [
 	{ title: 'Surge', slug: 'surge', supports: ['static'] },
 	{ title: 'Cleavr', slug: 'cleavr', supports: ['ssr', 'static'] },
 	{ title: 'Kinsta', slug: 'kinsta', supports: ['static'] },
+	{ title: 'Docker', slug: 'docker', supports: ['ssr', 'static']}
 ];
 ---
 
