--- a/src/components/CodeSnippet/CodeSnippet.astro
+++ b/src/components/CodeSnippet/CodeSnippet.astro
@@ -143,7 +143,6 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 <style lang="scss" is:global>
 	.code-snippet {
 		--glow-border: 1px solid var(--theme-glow-highlight);
-		filter: drop-shadow(0 0 0.3rem var(--theme-glow-diffuse));
 
 		.header,
 		pre {
@@ -167,12 +166,17 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 			letter-spacing: 0.025ch;
 			border-bottom-left-radius: 0;
 			border-bottom-right-radius: 0;
+			box-shadow: calc(var(--theme-glow-blur) * -0.5) calc(var(--theme-glow-blur) * -0.5)
+					var(--theme-glow-blur) calc(var(--theme-glow-blur) * -0.5) var(--theme-glow-diffuse),
+				calc(var(--theme-glow-blur) * 0.5) calc(var(--theme-glow-blur) * -0.5)
+					var(--theme-glow-blur) calc(var(--theme-glow-blur) * -0.5) var(--theme-glow-diffuse);
 		}
 
 		pre {
 			margin: 0;
 			padding: var(--padding-block) 0;
 			background-color: var(--theme-code-bg) !important;
+			box-shadow: 0 0 var(--theme-glow-blur) var(--theme-glow-diffuse);
 
 			&:focus-visible {
 				outline: 3px solid var(--theme-accent);
