--- a/src/components/RecipesNav.astro
+++ b/src/components/RecipesNav.astro
@@ -1,7 +1,7 @@
 ---
-import { englishPages } from '~/content';
-import { isRecipeEntry } from '~/content/config';
-import { getLanguageFromURL } from '~/util';
+import { recipePages } from '~/content';
+import { createIsLangEntry, isEnglishEntry } from '~/content/config';
+import { getLanguageFromURL, stripLangFromSlug } from '~/util';
 import CardsNav from './NavGrid/CardsNav.astro';
 
 export interface Props {
@@ -9,7 +9,15 @@ export interface Props {
 }
 
 const lang = getLanguageFromURL(Astro.url.pathname);
-const recipes = englishPages.filter(isRecipeEntry);
+const langRecipes = recipePages.filter(createIsLangEntry(lang));
+const englishRecipes = recipePages.filter(isEnglishEntry);
+
+/** An array of all recipes, using translations if available and falling back to English otherwise. */
+const recipes = englishRecipes.map((fallback) => {
+	const slug = stripLangFromSlug(fallback.slug);
+	const translation = langRecipes.find((doc) => stripLangFromSlug(doc.slug) === slug);
+	return translation || fallback;
+});
 ---
 
 <div>
@@ -18,6 +26,8 @@ const recipes = englishPages.filter(isRecipeEntry);
 		links={recipes.map(({ data, slug }) => ({
 			title: data.title,
 			description: data.description,
+			// Fallback entries will have a slug starting with 'en/',
+			// so we replace that to link to the correct language.
 			href: '/' + slug.replace('en/', `${lang}/`) + '/',
 		}))}
 	/>
