Add `lang="en"` to English fallback content in `<RecipesNav>`

--- a/src/components/NavGrid/CardsNav.astro
+++ b/src/components/NavGrid/CardsNav.astro
@@ -13,6 +13,8 @@ export interface Props {
 		logo?: LogoKey;
 		/** Map of tag IDs to translated tag display text, e.g. `{ static: 'Statisch' }`. */
 		tags?: Record<string, string>;
+		/** The language of the content if it differs from the main page language. */
+		lang?: string;
 	}[];
 	class?: string;
 }
@@ -26,9 +28,9 @@ const currentPage = new URL(Astro.request.url).pathname;
 	<slot />
 	<Grid minimal={minimal}>
 		{
-			links.map(({ description, href, logo, title, tags }) => (
+			links.map(({ description, href, logo, title, tags, lang }) => (
 				<Card
-					{...{ minimal, logo, href }}
+					{...{ minimal, logo, href, lang }}
 					current={currentPage.includes(href)}
 					class={Object.keys(tags || {}).join(' ')}
 				>
