--- a/src/components/RecipesNav.astro
+++ b/src/components/RecipesNav.astro
@@ -23,13 +23,19 @@ const recipes = englishRecipes.map((fallback) => {
 <div>
 	<CardsNav
 		minimal={Astro.props.minimal}
-		links={recipes.map(({ data, slug }) => ({
-			title: data.title,
-			description: data.description,
-			// Fallback entries will have a slug starting with 'en/',
-			// so we replace that to link to the correct language.
-			href: '/' + slug.replace('en/', `${lang}/`) + '/',
-		}))}
+		links={recipes.map(({ data, slug }) => {
+			const linkLang = slug.split('/').shift();
+			return {
+				title: data.title,
+				description: data.description,
+				// Fallback entries will have a slug starting with 'en/',
+				// so we replace that to link to the correct language.
+				href: '/' + slug.replace('en/', `${lang}/`) + '/',
+				// Fallback content will be in English, unlike the page,
+				// so we set an explicit `lang="en"` for these entries.
+				lang: linkLang !== lang ? linkLang : undefined,
+			};
+		})}
 	/>
 </div>
 
