ESLint: Remove unused import

--- a/src/layouts/BackendAsAServiceLayout.astro
+++ b/src/layouts/BackendAsAServiceLayout.astro
@@ -3,7 +3,7 @@ import type { MarkdownHeading } from 'astro';
 import Aside from '~/components/Aside.astro';
 import BackendAsAServiceGuidesNav from '~/components/BackendAsAServiceGuidesNav.astro';
 import UIString from '~/components/UIString.astro';
-import type { BaasEntry, baasSchema } from '~/content/config';
+import type { BaasEntry } from '~/content/config';
 import { getGithubEditUrl } from '~/util/getGithubEditUrl';
 import MainLayout from './MainLayout.astro';
 
